# PID_ML_in_O2

./: .gitignore  FastSimulations.cpp  FastSimulations.hpp  README.md
cc/: CMakeLists.txt
cc/dependencies/: CMakeLists.txt  ONNXRuntimeConfig.cmake  ONNXRuntimeVersion.cmake  PIDDependencies.cmake
cpp/: CMakeLists.txt  model-explorer.cpp
cpp/dependencies/: ONNXRuntime::ONNXRuntimeConfig.cmake  PIDDependencies.cmake  onnxruntimeConfig.cmake  onnxruntimeVersion.cmake
models/: Simple_example.onnx  Simple_example_multioutput.onnx  Simple_example_multioutput.torch  Simple_example_sep_nodes.onnx  Simple_example_sep_nodes.torch
python/: Simple_example.html  Simple_example.ipynb  Simple_example.py  Simple_example.torch  check_onnx_model.py  load.sh  load_python_env.sh  root_utils.py  run.sh  setup.py
python/data/: README.md
python/data/root/: train_184_pidtracksmc.root  train_184_pidtracksreal.root  train_196_pidtracksmc.root  train_197_pidtracksmc_globaltracks.root  train_197_pidtracksreal_globaltracks.root  train_198_pidtracksreal_globaltracks.root  train_199_pidtracksreal_globaltracks.root  train_200_pidtracksmc_globaltracks.root  train_200_pidtracksreal_globaltracks.root
